add YCSBlikeBenchmark