@@ -10,8 +10,6 @@ plugins {
 
 repositories {
     mavenCentral()
-//    maven { url 'https://repository.mulesoft.org/nexus/content/repositories/public/' }
-//    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -23,15 +21,6 @@ dependencies {
     api 'org.slf4j:slf4j-api:1.7.36'
     api 'com.google.protobuf:protobuf-java:3.8.0'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
-
-//    // https://jitpack.io/p/brianfrankcooper/YCSB
-//    implementation 'com.github.brianfrankcooper:YCSB:0.17.0'
-
-    // https://mvnrepository.com/artifact/com.github.brianfrankcooper.YCSB/core/0.17.0
-//    implementation 'com.github.brianfrankcooper.YCSB:core:0.17.0'
-
-//    compile group: 'site.ycsb', name: 'core', version: '0.17.0'
-//   //Thanks for using https://jar-download.com
 
     compileOnly 'com.github.spotbugs:spotbugs-annotations:4.7.1'
 
@@ -121,6 +110,24 @@ tasks.register('runMultiEmptyMessageBench', JavaExec) {
     mainClass = 'com.tsurugidb.tsubakuro.kvs.bench.EmptyMessageBench'
     jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED', '-Xmx1024M']
     args = ['ipc:tsurugi', '1,2,4,8,16,32,64,100', '10', '30']
+}
+
+tasks.register('runYCSBlikeBenchCreateDB', JavaExec) {
+    dependsOn ':tsubakuro-ipc:assemble'
+    classpath = sourceSets.main.runtimeClasspath
+    systemProperty 'com.tsurugidb.tsubakuro.jnilib', "${project(':tsubakuro-ipc').buildDir}/native/libtsubakuro.so"
+    mainClass = 'com.tsurugidb.tsubakuro.kvs.ycsb.YCSBlikeBenchmark'
+    jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED', '-Xmx1024M']
+    args = ['ipc:tsurugi', '8', 'createDB']
+}
+
+tasks.register('runYCSBlikeBench', JavaExec) {
+    dependsOn ':tsubakuro-ipc:assemble'
+    classpath = sourceSets.main.runtimeClasspath
+    systemProperty 'com.tsurugidb.tsubakuro.jnilib', "${project(':tsubakuro-ipc').buildDir}/native/libtsubakuro.so"
+    mainClass = 'com.tsurugidb.tsubakuro.kvs.ycsb.YCSBlikeBenchmark'
+    jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED', '-Xmx1024M']
+    args = ['ipc:tsurugi', '1,2,4,8', '50,95', '10', '30']
 }
 
 test {
